WIP Run tests in GitHub actions

--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -2,11 +2,13 @@ name: master
 
 on:
   push:
-    branches:
-    - master
-  pull_request:
-    branches:
-    - master
+    branches-ignore:
+      - '**' # FIXME - temporary!
+#    branches:
+#    - master
+#  pull_request:
+#    branches:
+#    - master
 
 jobs:
   build:
