--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -1,12 +1,17 @@
 name: master
 
 on:
+  # FIXME
   push:
-    branches:
-    - master
+    branches-ignore:
+      - '**'
+#    branches:
+#    - master
   pull_request:
-    branches:
-    - master
+    branches-ignore:
+      - '**'
+#    branches:
+#    - master
 
 jobs:
   build:
